--- a/css/index.css
+++ b/css/index.css
@@ -30,13 +30,6 @@ ul{
   color:#ffffff;
 }
 
-.dark{
-  padding:15px;
-  background:#35424a;
-  color:#ffffff;
-  margin-top:10px;
-  margin-bottom:10px;
-}
 
 /* Header **/
 header{
@@ -95,10 +88,12 @@ header a:hover{
   color:#ffffff;
 }
 
-#showcase h1{
-  margin-top:100px;
-  font-size:55px;
+h2{
+  margin-top:20px;
+  font-size:30px;
   margin-bottom:10px;
+  color:black;
+  text-decoration: underline;
 }
 
 #showcase p{
