--- a/css/Aboutus.css
+++ b/css/Aboutus.css
@@ -30,13 +30,6 @@ ul{
   color:#ffffff;
 }
 
-.dark{
-  padding:15px;
-  background:#35424a;
-  color:#ffffff;
-  margin-top:10px;
-  margin-bottom:10px;
-}
 
 /* Header **/
 header{
@@ -102,9 +95,11 @@ header a:hover{
  text-align:center;
 }
 #about h1{
+  margin-top:20px;
+  font-size:30px;
+  margin-bottom:10px;
   color:blue;
-  text-align:center;
-  text-decoration:underline overline;
+  text-decoration: underline overline;
 }
 #about h2{
   font-size:20px;
