--- a/css/lifeinieee.css
+++ b/css/lifeinieee.css
@@ -30,13 +30,6 @@ ul{
   color:#ffffff;
 }
 
-.dark{
-  padding:15px;
-  background:#35424a;
-  color:#ffffff;
-  margin-top:10px;
-  margin-bottom:10px;
-}
 
 /* Header **/
 header{
@@ -86,7 +79,12 @@ header a:hover{
   color:#cccccc;
   font-weight:bold;
 }
-
+p{
+color:black;
+}
+h4{
+color:black;
+}
 /* Life*/
 #life{
   min-height:400px;
@@ -107,12 +105,448 @@ h3{
 text-align:center;
 color:black;
 }
+.pic 
+    
+{
+       
+border: 10px solid #fff;  
+        
+float: right;
+         
+height: 200px;
+         
+width: 300px;
+         
+margin: 10px;
+         
+padding-right:10px;
+  
+        
+-webkit-box-shadow: 5px 5px 5px #111;
+          
+box-shadow: 5px 5px 5px #111;  
+    
+}
+    
+.pic1 
+    
+{
+        
+border: 10px solid #fff;  
+        
+float: left;
+         
+height: 200px;
+         
+width: 300px;
+         
+margin: 10px;
+         
+padding-right:10px;
+  
+        
+-webkit-box-shadow: 5px 5px 5px #111;
+          
+box-shadow: 5px 5px 5px #111;  
+    
+}
+    
+.pic2
+    
+{
+        
+border: 10px solid #fff;
+         
+height: 200px;
+         
+width: 200px;
+         
+margin-top: 10px;
+         
+margin-right:20px;
+  
+        
+-webkit-box-shadow: 5px 5px 5px #111;
+          
+box-shadow: 5px 5px 5px #111;  
+    
+}
+    
+.pic3 
+    
+{
+        
+border: 10px solid #fff;  
+        
+float:right;
 
+         
+height: 220px;
+         
+width: 320px;
+         
+margin: 10px;
+         
+padding-right:10px;
+  
+        
+-webkit-box-shadow: 5px 5px 5px #111;
+          
+box-shadow: 5px 5px 5px #111;  
+    
+}
+   
+.pic4 
+    
+{
+ 
+position: absolute; left: 180px; top:1630px;       
+border: 10px solid #fff;  
+        
+float: left;
+         
+height: 180px;
+         
+width: 265px;
+         
+margin: 10px;
+         
+padding-right:10px;
+  
+        
+-webkit-box-shadow: 5px 5px 5px #111;
+          
+box-shadow: 5px 5px 5px #111;    
+    
+}
+    
+.pic5 
+    
+{
+        
+border: 10px solid #fff;
+        
+float:right;
+         
+height: 200px;
+         
+width: 200px;
+        
+-webkit-box-shadow: 5px 5px 5px #111;
+          
+box-shadow: 5px 5px 5px #111;  
+    
+}
+    
+.pic6
+    
+{
+        
+border: 10px solid #fff;
+        
+height: 250px;
+         
+width: 300px;
+         
+margin-top: 10px;
+        
+margin-right:20px;
+  
+       
+-webkit-box-shadow: 5px 5px 5px #111;
+         
+box-shadow: 5px 5px 5px #111; 
+}
+ 
+.pic7
+    
+{
+        
+border: 10px solid #fff;  
+        
+float:right;
+
+         
+height: 220px;
+         
+width: 320px;
+         
+margin: 10px;
+         
+padding-right:10px;
+  
+        
+-webkit-box-shadow: 5px 5px 5px #111;
+          
+box-shadow: 5px 5px 5px #111;  
+    
+}
+   
+.pic8 
+    
+{
+        
+border: 10px solid #fff;  
+        
+float:right;
+
+         
+height: 220px;
+         
+width: 320px;
+         
+margin: 10px;
+         
+padding-right:10px;
+  
+        
+-webkit-box-shadow: 5px 5px 5px #111;
+          
+box-shadow: 5px 5px 5px #111;  
+    
+}
+   
+#littlecontainer
+    
+{
+        
+width:1032px;
+        
+height:2050px;
+       
+margin-left:auto;
+        
+margin-right:auto;
+    
+}
+     
+#section2
+    
+{
+        
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+width:650px;
+        
+height:260px;
+        
+padding:.5px;
+    
+}
+    
+#section3
+    
+{
+        
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+       
+text-align: center;
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+width:650px;
+        
+height:250px;
+        
+padding:.5px;
+    
+}
+     
+#section4
+    
+{
+        
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+        
+text-align: center;
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+float:left;
+        
+width:320px;
+        
+height:542px;
+        
+padding:.5px;
+        
+position:relative;
+        
+left:680px;
+        
+bottom:573px;
+    
+}
+    
+#section5
+    
+{
+        
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+width:1000px;
+        
+height:260px;
+       
+padding:.5px;   
+   
+}
+     
+#section6
+     
+{
+        
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+width:650px;
+        
+height:260px;
+        
+padding:.5px;
+ 
+text-align: left;   
+
+}
+    
+#section7
+    
+{
+        
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+        
+text-align: center;
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+width:650px;
+        
+height:250px;
+        
+padding:.5px;
+    
+}
+     
+#section8
+    
+{
+         
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+        
+text-align: center;
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+float:left;
+       
+ width:320px;
+        
+height:542px;
+        
+padding:.5px;
+        
+position:relative;
+        
+left:680px;
+        
+bottom:580px;
+    
+}
+    
+#section9    
+{
+        
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+width:1000px;
+        
+height:260px;
+        
+padding:.5px; 
+}
+   
+   
+#section10   
+{
+        
+background-color:#498afc;
+        
+border:15px solid rgb(250, 0, 0);
+        
+border:15px solid rgba(250, 250, 250, .5);
+        
+-webkit-background-clip: padding-box;
+        
+background-clip:padding-box;
+        
+width:1000px;
+        
+height:260px;
+        
+padding:.5px;   
+   
+}
+    
 /* Newsletter */
 #newsletter{
   padding:15px;
   color:#ffffff;
-  background:#2841fc
+  background-color: #2841fc;
 }
 
 #newsletter h1{
